; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_mtk_nand.c_mtk_nfc_write_subpage_hwecc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_mtk_nand.c_mtk_nfc_write_subpage_hwecc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nand_chip = type { i32 }
%struct.mtd_info = type { i32 }
%struct.mtk_nfc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nand_chip*, i32, i32, i32*, i32, i32)* @mtk_nfc_write_subpage_hwecc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_nfc_write_subpage_hwecc(%struct.nand_chip* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.nand_chip*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.mtd_info*, align 8
  %15 = alloca %struct.mtk_nfc*, align 8
  %16 = alloca i32, align 4
  store %struct.nand_chip* %0, %struct.nand_chip** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %17 = load %struct.nand_chip*, %struct.nand_chip** %8, align 8
  %18 = call %struct.mtd_info* @nand_to_mtd(%struct.nand_chip* %17)
  store %struct.mtd_info* %18, %struct.mtd_info** %14, align 8
  %19 = load %struct.nand_chip*, %struct.nand_chip** %8, align 8
  %20 = call %struct.mtk_nfc* @nand_get_controller_data(%struct.nand_chip* %19)
  store %struct.mtk_nfc* %20, %struct.mtk_nfc** %15, align 8
  %21 = load %struct.mtd_info*, %struct.mtd_info** %14, align 8
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* %10, align 4
  %24 = load i32*, i32** %11, align 8
  %25 = call i32 @mtk_nfc_format_subpage(%struct.mtd_info* %21, i32 %22, i32 %23, i32* %24)
  store i32 %25, i32* %16, align 4
  %26 = load i32, i32* %16, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %6
  %29 = load i32, i32* %16, align 4
  store i32 %29, i32* %7, align 4
  br label %38

30:                                               ; preds = %6
  %31 = load %struct.mtd_info*, %struct.mtd_info** %14, align 8
  %32 = load %struct.nand_chip*, %struct.nand_chip** %8, align 8
  %33 = load %struct.mtk_nfc*, %struct.mtk_nfc** %15, align 8
  %34 = getelementptr inbounds %struct.mtk_nfc, %struct.mtk_nfc* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* %13, align 4
  %37 = call i32 @mtk_nfc_write_page(%struct.mtd_info* %31, %struct.nand_chip* %32, i32 %35, i32 %36, i32 1)
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %30, %28
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local %struct.mtd_info* @nand_to_mtd(%struct.nand_chip*) #1

declare dso_local %struct.mtk_nfc* @nand_get_controller_data(%struct.nand_chip*) #1

declare dso_local i32 @mtk_nfc_format_subpage(%struct.mtd_info*, i32, i32, i32*) #1

declare dso_local i32 @mtk_nfc_write_page(%struct.mtd_info*, %struct.nand_chip*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
